# spectral-diff

./: .gitignore  README.md  config.yaml  cpu_notebook.sbatch  gpu_notebook.sbatch  job2.sbatch  job_image.sbatch  job_video.sbatch  job_video_juno.sbatch  pyproject.toml
config/: cloudy_conditional.yaml  cloudy_image.yaml  conditional_data.yaml  config.yaml  ddpm.yaml  single_image.yaml  trainer.yaml  trainer_image.yaml  unet.yaml  unet2D.yaml  unet_image.yaml
logslurm/: cloudy_image-350590_4294967294.err  cloudy_image-350591_4294967294.err  cloudy_image-350592_4294967294.err  cloudy_image_512-351355_4294967294.err  cloudy_image_512-351355_4294967294.out  cloudy_image_512-351378_4294967294.err  cloudy_image_512-351378_4294967294.out  cloudy_image_512-351389_4294967294.err  cloudy_image_512-351389_4294967294.out  cloudy_image_512-351393_4294967294.err  cloudy_image_512-351393_4294967294.out  cloudy_image_512-351395_4294967294.err  cloudy_image_resize-353066_4294967294.err  cloudy_image_resize-353163_4294967294.err  cloudy_image_resize-353165_4294967294.err  cloudy_image_resize-353167_4294967294.err  cloudy_image_resize_1e-3-353186_4294967294.err  cloudy_image_resize_1e-4-353189_4294967294.err  cloudy_image_resize_1e-5-353190_4294967294.err  cloudy_video-353178_4294967294.err  cloudy_video-353178_4294967294.out  cloudy_video-353187_4294967294.err  cloudy_video-353187_4294967294.out  cloudy_video-356482_4294967294.err  cloudy_video-356482_4294967294.out  cpu_notebook-353207_4294967294.err  cpu_notebook-353207_4294967294.out  cpu_notebook-353805_4294967294.err  cpu_notebook-353805_4294967294.out  cpu_notebook-353806_4294967294.err  cpu_notebook-353806_4294967294.out  cpu_notebook-353807_4294967294.err  cpu_notebook-353807_4294967294.out  cpu_notebook-353809_4294967294.err  cpu_notebook-353809_4294967294.out  extract-353177_4294967294.err  extract-353177_4294967294.out  extract-353194_4294967294.err  extract-353194_4294967294.out  extract-353195_4294967294.err  (+11 more)
runs/test/: config.yaml
src/spectral_diff/: dump.ipynb  extract_ms_dataset.py  hdf5_dataset.py  image.py  main.py  metrics.py  (+3 more)
wandb/: latest-run
(+93 files in other folders)
