[project]
authors = [{name = "Sélim Ollivier", email = "selim.ollivier@onera.fr"}]
dependencies = [
    "lightning[pytorch-extra]>=2.5.5,<3", 
    "diffusers[torch]>=0.35.2,<0.36", 
    "transformers>=4.57.1,<5", 
    "wandb>=0.22.2,<0.23",
    "patchmatch @ git+https://github.com/selim2483/patchmatch.git",
    "texture-metrics @ git+https://github.com/selim2483/texture-metrics.git"
, "einops>=0.8.1,<0.9", "plotly>=6.3.1,<7"]
name = "spectral-diff"
requires-python = ">= 3.11,<3.14"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cu129" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cu129" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
imageio = ">=2.37.0,<3"
