[project]
authors = [{name = "Sélim Ollivier", email = "selim.ollivier@onera.fr"}]
dependencies = [
    "lightning[pytorch-extra]>=2.5.5,<3", 
    "diffusers[torch]>=0.35.2,<0.36", 
    "transformers>=4.57.1,<5", 
    "wandb[media]>=0.23.0,<0.24",
    "patchmatch @ git+https://github.com/selim2483/patchmatch.git",
    "texture-metrics @ git+https://github.com/selim2483/texture-metrics.git"
, "einops>=0.8.1,<0.9", "plotly>=6.3.1,<7", "jupyter>=1.1.1,<2", "certifi>=2025.11.12,<2026", "ipython>=9.8.0,<10"]
name = "spectral-diff"
requires-python = ">= 3.11,<3.14"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cu129" }
torchvision = { version = ">=0.20.1", index = "https://download.pytorch.org/whl/cu129" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
imageio = ">=2.37.0,<3"
rasterio = ">=1.4.4,<2"
moviepy = ">=1.0.3,<2"
h5py = ">=3.15.1,<4"
